@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-17T00:34:20Z",
-  "count" : 16,
-  "count_minmax" : [ 15, 16 ],
-  "count_decinc" : [ -0, +16 ],
-  "uniques" : 2,
+  "timestamp" : "2022-07-30T16:06:38Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 16 ],
+  "count_decinc" : [ -15, +16 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
