@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-07-29T16:07:01Z",
+  "timestamp" : "2022-07-30T16:06:38Z",
   "count_outdated" : 564,
   "uniques_outdated" : 109,
-  "count" : 602,
-  "uniques" : 117,
+  "count" : 587,
+  "uniques" : 116,
   "views" : [
     {
       "timestamp": "2022-07-16T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 15, 16 ],
-      "uniques": 2,
+      "count": 1,
+      "count_minmax": [ 1, 16 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
