@@ -1,3 +1,10 @@
+2022-07-30T16:06:38Z:
+* notice: last 14d: unq all: 7 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 109 564 / 117 602
+* notice: next accum: outdated-unq outdated-all / unq all: 109 564 / 116 587
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -15 / +2 +16 -1 -15 / 1 1
+* notice: removed / changed dates: [] / [2022-07-16]
+
 2022-07-29T16:07:01Z:
 * notice: last 14d: unq all: 8 38
 * notice: prev accum: outdated-unq outdated-all / unq all: 109 564 / 116 599
